--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // for Spek
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.2.0.0"
     }
 }
 
